# parqet-python

./: README.md  pyproject.toml
src/: __init__.py  example.py  parqet.py
