# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parqet"
version = "1.0.4"
description = "A simple package to interact with the Parqet API."
readme = "README.md"
authors = [{ name = "JoghurtConnaisseur"}]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["parqet", "api", "fintech", "portfolio", "investing", "stocks"]
dependencies = [
    "loguru >= 0.7.0",
    "requests",
]
requires-python = ">=3.9"

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/JoghurtConnaisseur/parqet-python/"